--- a/public/showtimes.html
+++ b/public/showtimes.html
@@ -30,6 +30,7 @@
                 <input type="text" id="date-picker">
             </div>
             <button id="search-btn">Search</button>
+            <div id="showtimes-list"></div>
         </section>
         <section id="section-right">
         </section>
